--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.0.0",
     "@angular/material": "^18.2.3",
     "@angular/platform-browser": "^18.0.0",
@@ -29,7 +30,9 @@
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
+    "firebase": "^10.14.1",
     "ionicons": "^7.0.0",
+    "mapbox-gl": "^3.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
