--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@capacitor/cli": "6.1.2",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/mapbox__point-geometry": "^0.1.4",
+    "@types/mapbox-gl": "^3.4.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.57.0",
