--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/global.scss",
-              "src/theme/variables.scss"
+              "src/theme/variables.scss",
+              "node_modules/mapbox-gl/dist/mapbox-gl.css"
             ],
             "scripts": []
           },
