--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "@mapbox/mapbox-sdk": "^0.16.1",
     "firebase": "^10.14.1",
     "ionicons": "^7.0.0",
     "mapbox-gl": "^3.7.0",
@@ -50,6 +52,7 @@
     "@capacitor/cli": "6.1.2",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
     "@types/mapbox__point-geometry": "^0.1.4",
     "@types/mapbox-gl": "^3.4.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -65,6 +68,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "node-sass": "^9.0.0",
+    "sass": "^1.80.3",
     "typescript": "~5.4.0"
   },
   "description": "An Ionic project"
